# VisionX

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
.github/workflows/: build.yml
cmake/: conan_setup.cmake  deps.cmake  glad.cmake  glfw.cmake  glm.cmake  spdlog.cmake
include/core/: application.h  logger.h  window.h
include/core/input/: codes.h  input.h  keyboard.h  mouse.h
include/core/input/events/: key_event.h  mouse_button_event.h  mouse_event.h
include/event/: event.h  manager.h
include/ogl/: shader.h  shader_program.h  vertex_array.h  vertex_buffer.h
src/: CMakeLists.txt  main.cpp
src/core/: application.cpp  logger.cpp  window.cpp
src/core/input/: input.cpp
src/event/: event.cpp  manager.cpp
src/ogl/: shader.cpp  shader_program.cpp  vertex_array.cpp  vertex_buffer.cpp
